--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "nuwave/lighthouse": "^4.16"
     },
     "require-dev": {
+        "behat/behat": "^3.7",
         "facade/ignition": "^2.0",
         "fzaninotto/faker": "^1.9.1",
         "haydenpierce/class-finder": "^0.4.2",
